[gd_scene load_steps=2 format=3 uid="uid://bwdhpi8u68q5u"]

[ext_resource type="Script" path="res://scripts/settings.gd" id="1_u57p8"]

[node name="Settings" type="Control"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u57p8")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="SettingsHeader" type="HBoxContainer" parent="HeaderMargin"]
layout_mode = 2
mouse_filter = 2

[node name="SettingsLabel" type="Label" parent="HeaderMargin/SettingsHeader"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 36
text = "SETTINGS"

[node name="CloseButton" type="Button" parent="HeaderMargin/SettingsHeader"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
focus_neighbor_top = NodePath("../../../ControlsMargin/ControlsVBox/PauseCheckBox")
focus_neighbor_bottom = NodePath("../../../ControlsMargin/ControlsVBox/SFXVolume/VBoxContainer/SFXSlider")
focus_next = NodePath("../../../ControlsMargin/ControlsVBox/SFXVolume/VBoxContainer/SFXSlider")
focus_previous = NodePath("../../../ControlsMargin/ControlsVBox/PauseCheckBox")
mouse_default_cursor_shape = 2
text = "CLOSE"

[node name="ControlsMargin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 108
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 108
theme_override_constants/margin_bottom = 64

[node name="ControlsVBox" type="VBoxContainer" parent="ControlsMargin"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 48

[node name="SFXVolume" type="HBoxContainer" parent="ControlsMargin/ControlsVBox"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsMargin/ControlsVBox/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/ControlsVBox/SFXVolume/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="SFXLabel" type="Label" parent="ControlsMargin/ControlsVBox/SFXVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SFX VOLUME"

[node name="SFXValue" type="Label" parent="ControlsMargin/ControlsVBox/SFXVolume/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "(100%)"

[node name="SFXSlider" type="HSlider" parent="ControlsMargin/ControlsVBox/SFXVolume/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../../../HeaderMargin/SettingsHeader/CloseButton")
focus_neighbor_bottom = NodePath("../../../HBoxContainer/FullscreenCheckBox")
focus_next = NodePath("../../../HBoxContainer/FullscreenCheckBox")
focus_previous = NodePath("../../../../../HeaderMargin/SettingsHeader/CloseButton")
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="ControlsMargin/ControlsVBox"]
layout_mode = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="ControlsMargin/ControlsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../SFXVolume/VBoxContainer/SFXSlider")
focus_neighbor_right = NodePath("../DarkModeCheckBox")
focus_neighbor_bottom = NodePath("../../PauseCheckBox")
mouse_default_cursor_shape = 2
text = "FULLSCREEN"

[node name="DarkModeCheckBox" type="CheckBox" parent="ControlsMargin/ControlsVBox/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_neighbor_left = NodePath("../FullscreenCheckBox")
focus_neighbor_top = NodePath("../../SFXVolume/VBoxContainer/SFXSlider")
focus_neighbor_bottom = NodePath("../../PauseCheckBox")
mouse_default_cursor_shape = 2
text = "DARK MODE"

[node name="PauseCheckBox" type="CheckBox" parent="ControlsMargin/ControlsVBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../HBoxContainer/FullscreenCheckBox")
focus_neighbor_bottom = NodePath("../../../HeaderMargin/SettingsHeader/CloseButton")
focus_next = NodePath("../../../HeaderMargin/SettingsHeader/CloseButton")
focus_previous = NodePath("../HBoxContainer/FullscreenCheckBox")
mouse_default_cursor_shape = 2
text = "PAUSE AFTER ANSWERING QUESTION"
